Poprawka w skalowaniu strony

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="row">
 	<div class="container">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 textDivider about-tittle"></div>
-		<p><br></p>
+		<hr>
 	</div>
 </div>
 
@@ -219,7 +219,7 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container full-screen">
 	<!-- Team Members Row -->
 	<div class="row">
 		<div class="col-lg-12">
