Dodanie sekcji 'Kompetencje w sektorze ubezpieczeń'

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h4>Historia</h4>
+					<h5>Historia</h5>
 					<p class="card-text">Jeszcze doślę tekst do wpisania w tym miejscu</p>
 				</div>
 			</div>
@@ -124,7 +124,7 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h4>Wizja</h4>
+					<h5>Wizja</h5>
 					<p class="card-text">Pierwszy wybór w segmencie profesjonalnego doradztwa dla sektora usług finansowych. Nasi konsultanci będą stale zachęcani do sięgania granic swoich umiejętności, dążąc do w dostarczaniu mając na względzie zapewniania unikalnej wartości</p>
 				</div>
 			</div>
@@ -132,7 +132,7 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h4>Misja</h4>
+					<h5>Misja</h5>
 					<p class="card-text">Zapewnienie wyjątkowej jakości doradztwa mierzonego wypracowaną, unikalną wartością, skutecznością wdrożenia i nieskazitelną postawą.</p>
 				</div>
 			</div>
@@ -141,75 +141,64 @@
 </div>
 
 
-
+<!-- Page Content -->
 <div class="row">
     <div class="container">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 textDivider leaders-competition"></div>
         <hr>
     </div>
 </div>
-
-<!-- Page Content -->
-
 <div class="container full-screen">
 	<h3 class="my-4">Kompetencje w sektorze ubezpieczeń
 	</h3>
-	<!-- Marketing Icons Section -->
 	<div class="row">
-
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Wydajne narzędzia analityczne</h5>
-					<p class="card-text">Monitorowanie tendencji na rynku ubezpieczeń w okresie znaczącego przyrostu informacji.</p>
+					<h5>Strategie rozwoju</h5>
+					<ul>
+						<li>Wypracowanie strategii rozwoju  ubezpieczycieli lub ich wybranych obszarów biznesowych</li>
+						<li>Wzmocnienie obecnych przewag konkurencyjnych oraz identyfikacja przewag do potencjalnego rozwoju</li>
+						<li>Strategie produktowe, w tym wprowadzanie nowego produktu na rynek</li>
+						<li>Strategie cenowe  - dotyczy nowych i istniejących produktów</li>
+						<li>Ekspansja zagraniczna, fuzje i przejęcia (M&A)</li>
+						<li>Skuteczne wdrożenie (operacjonalizacja) strategii</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Modelowanie zdarzeń przyszłych</h5>
-					<p class="card-text">Wykorzystywanie analiz predykcyjnych do modelowania wskaźnika odejść (churn analysis), identyfikacji segmentów, czy analiz taryfikacyjnych przy zróżnicowanych kanałach sprzedaży.</p>
+					<h5>Poprawa efektywności (procesów)</h5>
+					<ul>
+						<li>Poprawa wydajności sprzedaży</li>
+						<li>Poprawa efektywności operacji (ryzyko, corporate governance, zasoby ludzkie)</li>
+						<li>Poprawa zwinności operacyjnej (agile, lean)</li>
+						<li>Zarządzanie zmianą - reorganizacje i restrukturyzacje</li>
+						<li>Transformacja cyfrowa</li>
+						<li>Włączanie kompetencji zewnętrznych do wspierania rozwoju organizacji</li>
+						<li>Integracja firm po transakcji</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Praktyczne rozwiązania</h5>
-					<p class="card-text">Dobór właściwych kompetencji i technik do opracowania skutecznych rozwiązań naszych Partnerów. </p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 mb-4">
-			<div class="card h-100 box">
-				<div class="card-body">
-					<h5>Dobór kierunków i strategii rozwoju</h5>
-					<p class="card-text"></p>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 mb-4">
-			<div class="card h-100 box">
-				<div class="card-body">
-					<h5>Poprawa efektywności obszarów biznesowych i całych organizacji</h5>
-					<p class="card-text"></p>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 mb-4">
-			<div class="card h-100 box">
-				<div class="card-body">
-					<h5>Analizy Big Data, business intelligence</h5>
-					<p class="card-text"></p>
+					<h5>Wielopoziomowe analizy i business intelligence</h5>
+					<ul>
+						<li>Analizy segmentacyjne</li>
+						<li>Prognozowanie wydarzeń w oparciu o duże ilości danych wraz z wyborem optymalnych planów działania</li>
+						<li>Analizy powodów odejść klientów, niskich wskaźników konwersji</li>
+						<li>Benchmarking strategiczny</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
-
+<!-- End Page Content -->
 
 
 <div class="row">
@@ -218,13 +207,12 @@
 		<hr>
 	</div>
 </div>
-
 <div class="container full-screen">
-	<!-- Team Members Row -->
 	<div class="row">
 		<div class="col-lg-12">
 			<h3 class="my-4">Partnerzy</h3>
 		</div>
+
 		<div class="col-lg-4 col-sm-6 text-center mb-4">
 			<p><br></p>
 			<img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt="">
@@ -249,13 +237,6 @@
 				<small>Partner</small>
 			</h4>
 		</div>
-		<!--<div class="col-lg-4 col-sm-6 text-center mb-4">
-			<img class="rounded-circle img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt="">
-			<h3>Marek Balcerzak
-                <small>Manager, Dział Usług Finansowych</small>
-			</h3>
-			<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		</div>-->
 	</div>
 </div>
 <!-- /.container -->
