Przykład z wykorzystaniem modal

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 	</div>
 </header>
 
+
 <div class="row">
 	<div class="container">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 textDivider about-tittle"></div>
@@ -212,10 +213,9 @@
 		<div class="col-lg-12">
 			<h3 class="my-4">Partnerzy</h3>
 		</div>
-
 		<div class="col-lg-4 col-sm-6 text-center mb-4">
 			<p><br></p>
-			<img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt="">
+			<img data-toggle="modal" data-target="#leadersModal" class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt="">
 			<br>
 			<h4>Krzysztof Jarmuszczak <br>
 				<small>Partner Zarządzający</small>
@@ -240,6 +240,42 @@
 	</div>
 </div>
 <!-- /.container -->
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="leadersModal" tabindex="-1" role="dialog" aria-labelledby="leadersModalLabel">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			</div>
+			<div class="modal-body">
+				<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+					<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/igor-rusinowski.jpg" alt=""></a>
+					<h4>Krzysztof Jarmuszczak <br>
+						<small>Partner Zarządzający</small>
+					</h4>
+				</div>
+				<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
+					<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawniania modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
+					<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu). W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
+					<p>Krzysztof pełni funkcję Partnera Zarządzającego Data Zoom Management Consulting oraz Prezesa Zarządu.</p>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
 
 
 
