--- a/index.html
+++ b/index.html
@@ -213,224 +213,90 @@
 		<div class="col-lg-12">
 			<h3 class="my-4">Partnerzy</h3>
 		</div>
-		<div class="col-lg-4 col-sm-6 text-center mb-4">
-			<p><br></p>
-			<img data-toggle="modal" data-target="#leadersModal" class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt="">
-			<br>
-			<h4>Krzysztof Jarmuszczak <br>
-				<small>Partner Zarządzający</small>
-			</h4>
-		</div>
-		<div class="col-lg-4 col-sm-6 text-center mb-4">
-			<p><br></p>
-			<img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/igor-rusinowski.jpg" alt="">
-			<br>
-			<h4>Marek Balcerzak <br>
-				<small>Partner</small>
-			</h4>
-		</div>
-		<div class="col-lg-4 col-sm-6 text-center mb-4">
-			<p><br></p>
-			<img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt="">
-			<br>
-			<h4>Artur Kruszewski <br>
-				<small>Partner</small>
-			</h4>
-		</div>
-	</div>
-</div>
-<!-- /.container -->
 
-
-
-
-<!-- Modal -->
-<div class="modal fade" id="leadersModal" tabindex="-1" role="dialog" aria-labelledby="leadersModalLabel">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<div class="card-leaders">
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt=""></a>
+				<br>
+				<h4>Krzysztof Jarmuszczak
+					<br>
+					<small>Partner Zarządzający</small>
+				</h4>
 			</div>
-			<div class="modal-body">
-				<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
-					<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/igor-rusinowski.jpg" alt=""></a>
-					<h4>Krzysztof Jarmuszczak <br>
-						<small>Partner Zarządzający</small>
-					</h4>
-				</div>
-				<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
-					<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawniania modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
-					<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu). W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
-					<p>Krzysztof pełni funkcję Partnera Zarządzającego Data Zoom Management Consulting oraz Prezesa Zarządu.</p>
-				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-
-
-
-
-
-
-
-	<!-- /.row -->
-
-<!--<header>
-	<div class="container">
-		<div class="row text-left">
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-				<a href="/">
-					<img class="logo" src="bundles/dz/dz/images/3ebcc538.logo.png" alt="DataZoom">
-				</a>
-
-			</div>
-		</div>
-	</div>
-</header>
-
-
-<div class="container">
-</div>
-
-
-<div class="container">
-	<br>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		&lt;!&ndash; Indicators &ndash;&gt;
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
-			<li data-target="#myCarousel" data-slide-to="2"></li>
-		</ol>
-
-		<div id="carousel" class="carousel-inner" role="listbox">
-			<div class="item active">
-				<img class="carousel_img" src="bundles/dz/dz/images/DZperspektywa.jpg" alt="" >
-				<div class="carousel-caption hide">
-					&lt;!&ndash; <p style="font-size:40px; font-family: 'PT Sans', serif;">Pełniejsza <strong>perspektywa</strong> wyceny ryzyka</p> &ndash;&gt;
-				</div>
-			</div>
-
-			<div class="item">
-				<img class="carousel_img" src="bundles/dz/dz/images/DZwglad.jpg" alt="" >
-				<div class="carousel-caption hide">
-					&lt;!&ndash; <p style="font-size:30px; font-family: 'PT Sans', serif;">Wgląd pozwalający na <strong>większą pewność</strong> decyzji</p> &ndash;&gt;
-					&lt;!&ndash; <p style="font-size:20px; font-family: 'PT Sans', serif;">Szybsze reakcje z lepszym skutkiem.</p> &ndash;&gt;
-				</div>
-			</div>
-
-			<div class="item">
-				<img class="carousel_img" src="bundles/dz/dz/images/DZtaryfikacjaa.jpg" alt="" >
-				<div class="carousel-caption hide">
-					&lt;!&ndash; <p style="font-size:40px; font-family: 'PT Sans', serif;">Nowe spojrzenie na proces taryfikacji.</p> &ndash;&gt;
+			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
+				<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawniania modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
+				<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu). W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
+				<p>Krzysztof pełni funkcję Partnera Zarządzającego Data Zoom Management Consulting oraz Prezesa Zarządu.</p>
+				<div class="float-right flag">
+					<ul>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/33px-Flag_of_Austria.svg.png" alt="AT"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/33px-Flag_of_Slovakia.svg.png" alt="SK"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/33px-Flag_of_Ukraine.svg.png" alt="UA"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/33px-Flag_of_Romania.svg.png" alt="RO"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_Georgia.svg/33px-Flag_of_Georgia.svg.png" alt="GU"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_United_Kingdom.svg/33px-Flag_of_the_United_Kingdom.svg.png" alt="GB"></li>
+					</ul>
 				</div>
 			</div>
 		</div>
 
-		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
-</div>
-
-<script>
-    var c_height = $(window).height() - 200;
-    $('.carousel_img').css({'height' : c_height + "px", 'max-height' : '440px', 'width' : 100 + '%' });
-</script>-->
-
-<!--<div class="container">
-</div>
-<div class="row">
-	<div class="container center">
-		<div class="boxes" style="margin-top:20px">
-			&lt;!&ndash;
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <a href="http://datazoom.pl/asfa">
-                        <div class="box">
-                            <img src="Data%20Zoom_pliki/3ebcc538.png" alt="" style="width: 48px">
-                            <h3>Doradztwo strategiczne</h3>
-                            <p>Analiza najbardziej efektywnych sposobów konkurowania
-                                parametrem ceny</p>
-                        </div>
-                    </a>
-                </div>
-            &ndash;&gt;
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-				<a href="#">
-					<div class="box">
-						<img src="bundles/dz/dz/images/3ebcc538.logo.png" alt="" style="width: 48px">
-						<h3>Wydajne narzędzia analityczne </h3>
-						<p>Monitorowanie tendencji na rynku ubezpieczeń w okresie znaczącego przyrostu informacji.</p>
-					</div>
-				</a>
+		<div class="card-leaders">
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:marek.balcerzak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt=""></a>
+				<br>
+				<h4>Marek Balcerzak
+					<br>
+					<small>Partner Zarządzający</small>
+				</h4>
 			</div>
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-				<a href="#">
-					<div class="box">
-						<img src="bundles/dz/dz/images/3ebcc538.logo.png" alt="" style="width: 48px">
-						<h3>Modelowanie zdarzeń przyszłych</h3>
-						<p>Wykorzystywanie analiz predykcyjnych do modelowania wskaźnika odejść (churn analysis),
-							identyfikacji segmentów, czy analiz taryfikacyjnych przy zróżnicowanych kanałach sprzedaży.</p>
-					</div>
-				</a>
-			</div>
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-				<a href="#">
-					<div class="box">
-						<img src="bundles/dz/dz/images/3ebcc538.logo.png" alt="" style="width: 48px">
-						<h3>Praktyczne rozwiązania</h3>
-						<p>Dobór właściwych kompetencji i technik do opracowania skutecznych rozwiązań naszych Partnerów. </p>
-					</div>
-				</a>
+			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
+				<p>Marek wspiera klientów w doborze strategii wzrostu, wzmacnianiu przewag konkurencyjnych, strategiach produktowych i cenowych oraz poprawą wydajności procesów sprzedażowych.</p>
+				<p>Marek od ponad 15 lat jest związany związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej, zarządzając rozwojem linii Property & Engineering w Polskim Towarzystwie Reasekuracji, nadzorując rozwój operacji zagranicznych Grupy PZU oraz kierując zespołem Analiz Strategicznych Grupy PZU. Marek jest dwóch współzałożycielem innowacyjnych podmiotów w sektorze ubezpieczeń (Wygodnie.pl i Data Zoom).</p>
+				<p>Marek Balcerzak pełni funkcję Partnera w Dziale Doradztwa Strategicznego Data Zoom Management Consulting.</p>
+				<div class="float-right flag">
+					<ul>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/33px-Flag_of_Austria.svg.png" alt="AT"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>-->
+
+		<div>
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:martur.kruszewski@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt=""></a>
+				<br>
+				<h4>Artur Kruszewski
+					<br>
+					<small>Partner Zarządzający</small>
+				</h4>
+			</div>
+			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
+				<p>Artur wspiera ubezpieczycieli w przeprowadzaniu transformacji technologicznych, zarządzaniu obszarami technologicznymi, zarządzania obszarami technologicznymi, projektowaniu i wdrażaniu rozwiązań usprawniających procesy sprzedaży i obsługi klienta oraz zarządzaniu zmianą.</p>
+				<p>Od ponad 16 lat związany sektorem technologicznych w ubezpieczeniach. Posiada bogate doświadczenie zarządzania projektami transformacyjnymi (Link4, Unilink) oraz doświadczenie tworzenia od podstaw operacji typu Direct w Polsce i Czechach (Link4, Pojistovna).</p>
+				<p>Artur pełni funkcję Partnera w Dziale  Operacyjnym Data Zoom Management Consulting.</p>
+				<div class="float-right flag">
+					<ul>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
 
-<!--
-<div class="row">
-	<div class="container">
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 textDivider"></div>
-		<hr>
 	</div>
 </div>
 
-
-
-<section id="login" class="login_box_wrapper">
-	<div class="row">
-		<div class="container">
-			<div
-					class="col-xs-10 col-sm-8 col-md-4 col-lg-4 col-xs-offset-1 col-sm-offset-2 col-md-offset-4 col-lg-offset-4 login_box">
-				<h3>Wypełnij aby się zalogować</h3>
-				<form action="/login_check" method="POST" role="form">
-					<div class="form-group">
-						<label for="email">Nazwa użytkownika</label> <input type="text"
-																			class="form-control" id="email" placeholder="Nazwa użytkownika" name="_username">
-					</div>
-					<div class="form-group">
-						<label for="password">Hasło</label> <input type="password"
-																   class="form-control" id="password" placeholder="Hasło" name="_password">
-					</div>
-					<br> <input type="submit" class="btn btn-red" value="Zaloguj"><br> <br>
-					<a href="/nie-pamietam-hasla">Zapomniałem hasła</a>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>-->
 
 <div class="row">
     <div class="container">
