Przykład z wykorzystaniem modal

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 	<!-- Introduction Row -->
 	<h3 class="my-4">o Data Zoom</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+	<p style="margin-bottom: 30px">&nbsp;</p>
 	<div class="row">
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
@@ -150,18 +151,17 @@
     </div>
 </div>
 <div class="container full-screen">
-	<h3 class="my-4">Kompetencje w sektorze ubezpieczeń
-	</h3>
+	<h3 class="my-4">Kompetencje w sektorze ubezpieczeń</h3>
 	<div class="row">
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
 					<h5>Strategie rozwoju</h5>
 					<ul>
-						<li>Wypracowanie strategii rozwoju  ubezpieczycieli lub ich wybranych obszarów biznesowych</li>
+						<li>Wypracowanie strategii rozwoju  ubezpieczycieli lub wybranych obszarów biznesowych</li>
 						<li>Wzmocnienie obecnych przewag konkurencyjnych oraz identyfikacja przewag do potencjalnego rozwoju</li>
-						<li>Strategie produktowe, w tym wprowadzanie nowego produktu na rynek</li>
-						<li>Strategie cenowe  - dotyczy nowych i istniejących produktów</li>
+						<li>Strategie produktowe, <br>w tym wprowadzanie na rynek nowego produktu</li>
+						<li>Strategie cenowe  - dotyczy nowych <br>i istniejących produktów</li>
 						<li>Ekspansja zagraniczna, fuzje i przejęcia (M&A)</li>
 						<li>Skuteczne wdrożenie (operacjonalizacja) strategii</li>
 					</ul>
@@ -171,12 +171,13 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Poprawa efektywności (procesów)</h5>
+					<h5>Poprawa efektywności</h5>
 					<ul>
 						<li>Poprawa wydajności sprzedaży</li>
-						<li>Poprawa efektywności operacji (ryzyko, corporate governance, zasoby ludzkie)</li>
-						<li>Poprawa zwinności operacyjnej (agile, lean)</li>
-						<li>Zarządzanie zmianą - reorganizacje i restrukturyzacje</li>
+						<li>Poprawa doświadczenia klienta</li>
+						<li>Poprawa efektywności operacji <br>(ryzyko, corporate governance, zasoby ludzkie)</li>
+						<li>Poprawa zwinności operacyjnej <br>(agile, lean)</li>
+						<li>Zarządzanie zmianą - reorganizacje <br>i restrukturyzacje</li>
 						<li>Transformacja cyfrowa</li>
 						<li>Włączanie kompetencji zewnętrznych do wspierania rozwoju organizacji</li>
 						<li>Integracja firm po transakcji</li>
@@ -187,10 +188,10 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Wielopoziomowe analizy i business intelligence</h5>
+					<h5>Wielopoziomowe analizy <br>i business intelligence</h5>
 					<ul>
 						<li>Analizy segmentacyjne</li>
-						<li>Prognozowanie wydarzeń w oparciu o duże ilości danych wraz z wyborem optymalnych planów działania</li>
+						<li>Prognozowanie wydarzeń w oparciu <br>o duże ilości danych wraz z wyborem optymalnych planów działania</li>
 						<li>Analizy powodów odejść klientów, niskich wskaźników konwersji</li>
 						<li>Benchmarking strategiczny</li>
 					</ul>
@@ -215,9 +216,9 @@
 		</div>
 
 		<div class="card-leaders">
-			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
-				<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt=""></a>
-				<br>
+			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
+				<!--<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt=""></a>
+				<br>-->
 				<h4>Krzysztof Jarmuszczak
 					<br>
 					<small>Partner Zarządzający</small>
@@ -225,33 +226,42 @@
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
 				<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawniania modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
-				<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu). W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
+				<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu).
+					<br>W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
 				<p>Krzysztof pełni funkcję Partnera Zarządzającego Data Zoom Management Consulting oraz Prezesa Zarządu.</p>
 				<div class="float-right flag">
 					<ul>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/33px-Flag_of_Austria.svg.png" alt="AT"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/33px-Flag_of_Slovakia.svg.png" alt="SK"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/33px-Flag_of_Ukraine.svg.png" alt="UA"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/33px-Flag_of_Romania.svg.png" alt="RO"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL" title="Polska"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA" title="Litwa"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Latvia.svg/33px-Flag_of_Latvia.svg.png" alt="LV" title="Lotwa"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Flag_of_Bosnia_and_Herzegovina.svg/33px-Flag_of_Bosnia_and_Herzegovina.svg.png" alt="BA" title="Bośnia i Hercegowina"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/33px-Flag_of_Austria.svg.png" alt="AT" title="Austria"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE" title="Estonia"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU" title="Rumunia"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK" title="Republika Czeska"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/33px-Flag_of_Slovakia.svg.png" alt="SK" title="Słowacja"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Flag_of_Slovenia.svg/33px-Flag_of_Slovenia.svg.png" alt="SI" title="Słowenia"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/33px-Flag_of_Ukraine.svg.png" alt="UA" title="Ukraina"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/33px-Flag_of_Croatia.svg.png" alt="HRK" title="Chorwacja"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/33px-Flag_of_Romania.svg.png" alt="RO" title="Białoruś"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_Georgia.svg/33px-Flag_of_Georgia.svg.png" alt="GU"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_United_Kingdom.svg/33px-Flag_of_the_United_Kingdom.svg.png" alt="GB"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Flag_of_Belarus.svg/33px-Flag_of_Belarus.svg.png" alt="BY" title="Białoruś"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Bulgaria.svg/33px-Flag_of_Bulgaria.svg.png" alt="BG" title="Bułgaria"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_United_Kingdom.svg/33px-Flag_of_the_United_Kingdom.svg.png" alt="GB" title="Wielka Brytania"></li>
 					</ul>
+					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 600 034 100 <br>
+						krzysztof.jarmuszczak@datazoom.pl</p>
 				</div>
 			</div>
 		</div>
 
 		<div class="card-leaders">
-			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
-				<a href="mailto:marek.balcerzak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt=""></a>
-				<br>
+			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
+				<!--<a href="mailto:marek.balcerzak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt=""></a>
+				<br>-->
 				<h4>Marek Balcerzak
 					<br>
-					<small>Partner Zarządzający</small>
+					<small>Partner</small>
 				</h4>
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
@@ -261,23 +271,25 @@
 				<div class="float-right flag">
 					<ul>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/33px-Flag_of_Austria.svg.png" alt="AT"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU"></li>
-						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA" title="Litwa"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Latvia.svg/33px-Flag_of_Latvia.svg.png" alt="LV" title="Lotwa"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE" title="Estonia"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/33px-Flag_of_Ukraine.svg.png" alt="UA" title="Ukraina"></li>
+						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU" title="Rumunia"></li>
 					</ul>
+					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 604 182 893 <br>
+						marek.balcerzak@datazoom.pl</p>
 				</div>
 			</div>
 		</div>
 
 		<div>
-			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
-				<a href="mailto:martur.kruszewski@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt=""></a>
-				<br>
+			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
+				<!--<a href="mailto:martur.kruszewski@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt=""></a>
+				<br>-->
 				<h4>Artur Kruszewski
 					<br>
-					<small>Partner Zarządzający</small>
+					<small>Partner</small>
 				</h4>
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
@@ -286,9 +298,14 @@
 				<p>Artur pełni funkcję Partnera w Dziale  Operacyjnym Data Zoom Management Consulting.</p>
 				<div class="float-right flag">
 					<ul>
+						<li>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
 					</ul>
+					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 606 850 877 <br>
+						artur.kruszewski@datazoom.pl</p>
+
 				</div>
 			</div>
 		</div>
@@ -305,13 +322,38 @@
     </div>
 </div>
 
+<div class="container full-screen">
+	<h3 class="my-4">Kontakt</h3>
+	<p><br></p>
+	<p><br></p>
+	<div class="row">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+		</div>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" >
+			<img src="bundles/dz/dz/images/312b81e3.icon_email.png" alt="">
+		</div>
+		<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+			<h5 style="margin-top: 5px;">Data Zoom Management Consulting Sp. z.o.o.</h5>
+			Ul. Plac Bankowy 2, 00-095 Warszawa <br>
+			KRS: 0000499102 <br>
+			NIP: 5242766978 <br>
+			<a href="mailto:contact@datazoom.pl">contact@datazoom.pl</a>
+			<p><br></p>
+			<p><br></p>
+			<h6>Krzysztof Jarmuszczak</h6>
+			<p>Partner Zarządzający<br>
+				+48 600 034 100 <br>
+				krzysztof.jarmuszczak@datazoom.pl</p>
+		</div>
+	</div>
+</div>
+
+
+
 <footer>
 	<div class="container">
-		<div class="row">
+		<!--<div class="row">
 			<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-				<!--	<img src="Data%20Zoom_pliki/531fc0f3.png" alt="">
-                    <h3>Kontakt telefoniczny</h3>
-                    <p>+48 604 182 893</p>	-->
 			</div>
 			<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" >
 				<img src="bundles/dz/dz/images/312b81e3.icon_email.png" alt="">
@@ -320,7 +362,7 @@
 				<h5 style="margin-top: 5px;">Adres Email</h5>
 				<span><a href="mailto:contact@datazoom.pl">contact@datazoom.pl</a></span>
 			</div>
-		</div>
+		</div>-->
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 copyright">
 				<p class="text-center" style="font-size: 12px">
