Przykład z wykorzystaniem modal

--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
 			KRS: 0000499102 <br>
 			NIP: 5242766978 <br>
 			<a href="mailto:contact@datazoom.pl">contact@datazoom.pl</a>
-			<p><br></p>
-			<p><br></p>
+			<p style="min-height: 20%"><br></p>
 			<h6>Krzysztof Jarmuszczak</h6>
 			<p>Partner Zarządzający<br>
 				+48 600 034 100 <br>
@@ -366,11 +365,11 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 copyright">
 				<p class="text-center" style="font-size: 12px">
-					Data Zoom Management Consulting Sp. z o.o.
+					<!--Data Zoom Management Consulting Sp. z o.o.
 					, ul. Plac Bankowy 2, 00-095 Warszawa,
 					zarejestrowana w Sądzie Rejonowym dla m. st. Warszawy XII Wydział
 					Gospodarczy, pod numerem KRS: 0000499102, NIP: 5242766978, wysokość
-					kapitału zakładowego 50 000,00 zł. Kapitał został opłacony w całości
+					kapitału zakładowego 50 000,00 zł. Kapitał został opłacony w całości-->
 					<br>© Data Zoom - Wszelkie prawa zastrzeżone
 				</p>
 			</div>
